Add scoped values and update ds's